package com.adulting101.ManchApp.enums;

public enum Categoria {
    GRASA,
    ECOCLEAN,
    StainSolver,
    Desmanchificador3000,
    POLVO,
    ROPA,

}
