package com.adulting101.ManchApp.models;

import com.adulting101.ManchApp.enums.Nivel;
import jakarta.persistence.*;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Entity
@Table (name ="soluciones_favoritas")
@Data
@AllArgsConstructor
@NoArgsConstructor
@Builder

public class SolucionFavorita {

}