package com.adulting101.ManchApp.models;

public class Sustancia {
}
