classDiagram
    %% PRIMERA HERENCIA - Sustancia como clase padre
    class Sustancia {
        <<abstract>>
        -Long id
        -String nombre
        -String descripcion
        -String tipoSustancia
        -String color
        -boolean toxico
        -boolean natural
        -PeligrosidadNivel peligrosidad
        -LocalDateTime fechaCreacion
        +getId() Long
        +getNombre() String
        +getDescripcion() String
        +isToxico() boolean
        +isNatural() boolean
    }

    class TipoMancha {
        -String categoriaMancha
        -String origen
        -DificultadLimpieza dificultadLimpieza
        -boolean urgente
        -boolean seFijaConCalor
        -Double phAproximado
        -Integer tiempoSecadoHoras
        +getCategoriaMancha() String
        +getOrigen() String
        +getDificultadLimpieza() DificultadLimpieza
        +isUrgente() boolean
        +isSeFijaConCalor() boolean
        +getNumeroSolucionesDisponibles() int
    }

    class Ingrediente {
        -String tipoIngrediente
        -BigDecimal phValor
        -BigDecimal concentracionMaxima
        -Integer tiempoContactoMaxMinutos
        -BigDecimal precioAproximado
        -boolean disponibleSupermercado
        -boolean requiereVentilacion
        -boolean compatibleConAgua
        -EstadoFisico estadoFisico
        -String temperaturaAlmacenamiento
        +getTipoIngrediente() String
        +getPhValor() BigDecimal
        +getEstadoFisico() EstadoFisico
        +isDisponibleSupermercado() boolean
        +isRequiereVentilacion() boolean
    }

    %% SEGUNDA HERENCIA - Material como clase padre
    class Material {
        <<abstract>>
        -Long id
        -String nombre
        -String descripcion
        -boolean delicado
        -LocalDateTime fechaCreacion
        +getId() Long
        +getNombre() String
        +getDescripcion() String
        +isDelicado() boolean
        +getNumeroSolucionesDisponibles() int
    }

    class Tela {
        -String tipoFibra
        -boolean lavableMaquina
        -String cuidadosEspeciales
        -int temperaturaMaxima
        -boolean secadoAire
        +getTipoFibra() String
        +isLavableMaquina() boolean
        +getCuidadosEspeciales() String
        +getTemperaturaMaxima() int
        +isSecadoAire() boolean
    }

    class Superficie {
        -String tipoSuperficie
        -boolean resistenteAgua
        -String acabado
        -boolean poroso
        +getTipoSuperficie() String
        +isResistenteAgua() boolean
        +getAcabado() String
        +isPoroso() boolean
    }

    %% Entidad principal de soluciones MEJORADA
    class SolucionLimpieza {
        -Long id
        -String titulo
        -String instrucciones
        -Integer tiempoMinutos
        -DificultadAplicacion dificultadAplicacion
        -Integer efectividad
        -String advertencias
        -String consejos
        -boolean casero
        -boolean requiereVentilacion
        -boolean seguroParaNiños
        -BigDecimal precioEstimado
        -LocalDateTime fechaCreacion
        +getId() Long
        +getTitulo() String
        +getInstrucciones() String
        +getEfectividad() Integer
        +isCasero() boolean
        +esCompatibleConMancha() boolean
        +esCompatibleConMaterial() boolean
        +esCompatibleConCombinacion() boolean
        +getNivelRiesgoGeneral() PeligrosidadNivel
    }

    %% Entidad de usuarios (para autenticación)
    class Usuario {
        -Long id
        -String username
        -String email
        -String password
        -String nombre
        -String apellidos
        -boolean activo
        -LocalDateTime fechaRegistro
        +getId() Long
        +getUsername() String
        +getEmail() String
        +isActivo() boolean
    }

    %% Entidad de favoritos del usuario
    class SolucionFavorita {
        -Long id
        -String notas
        -LocalDateTime fechaGuardado
        -boolean probado
        -Integer valoracion
        +getId() Long
        +getNotas() String
        +isProbado() boolean
        +getValoracion() Integer
    }

    %% Entidad de categorías para mejor organización
    class Categoria {
        -Long id
        -String nombre
        -String descripcion
        -String icono
        -String color
        +getId() Long
        +getNombre() String
        +getIcono() String
    }

    %% RELACIONES DE HERENCIA
    Sustancia <|-- TipoMancha
    Sustancia <|-- Ingrediente
    Material <|-- Tela
    Material <|-- Superficie

    %% ============ NUEVAS RELACIONES MUCHOS A MUCHOS ============
    
    %% Una solución puede servir para múltiples tipos de mancha
    SolucionLimpieza }|--|| TipoMancha : "solucion_tipos_mancha"
    
    %% Una solución puede aplicarse en múltiples materiales  
    SolucionLimpieza }|--|| Material : "solucion_materiales"
    
    %% Una solución puede contener múltiples ingredientes
    SolucionLimpieza }|--|| Ingrediente : "solucion_ingredientes"
    
    %% Ingredientes incompatibles entre sí
    Ingrediente }|--|| Ingrediente : "ingredientes_incompatibles"
    
    %% Relaciones restantes (1:N)
    Usuario ||--o{ SolucionFavorita : "guarda"
    SolucionLimpieza ||--o{ SolucionFavorita : "es guardada"
    Categoria ||--o{ TipoMancha : "categoriza"

    %% ANOTACIONES MEJORADAS
    note for Sustancia "JOINED Strategy - Padre de TipoMancha e Ingrediente"
    note for Material "JOINED Strategy - Padre de Tela y Superficie"  
    note for SolucionLimpieza "¡MEJORADO! Una solución sirve para múltiples manchas y materiales"
    note for TipoMancha "Ejemplo: 'Vino Tinto' puede tener 5 soluciones diferentes"
    note for Material "Ejemplo: 'Algodón' puede tener soluciones para 10 tipos de mancha"
    note for Ingrediente "Ejemplo: 'Bicarbonato' se usa en múltiples soluciones"